MyMovies/kubernetes/mvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvc
  namespace: ns-mymovies
  labels:
    name: mymovies
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mymovies
  template:
    metadata:
      labels:
        app: mymovies
    spec:
      containers:
      - name: mvc
        image: mymoviesmvc:v1
      restartPolicy: Always
