MyMovies/kubernetes/mvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mvc
  namespace: ns-mymovies
  labels:
    app: mymovies
spec:
  ports:
  - name: "mvc"
    port: 5000
    targetPort: 5000
  selector:
    app: mymovies
  type: ClusterIP
