MyMovies/kubernetes/mvc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mvc-ingress
  namespace: ns-mymovies
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  tls:
  - hosts:
    - dev.mymovies.local
    secretName: tls-certificate
  rules:
    - host: dev.mymovies.local
      http:
        paths:
        - path: /
          backend:
            serviceName: mvc
            servicePort: 5000
